[project]
name = "putting_dune"
description = "Putting Dune."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [{name = "Putting Dune Authors", email="putting_dune-dev@google.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
]
keywords = []

# pip dependencies of the project
dependencies = [
    "absl-py",
    "dm_env",
    "etils>=0.9.0",
    "etils[eapp]>=0.9.0",
    "frozendict",
    "jax",
    "jaxlib",
    "matplotlib",
    "numpy",
    "opencv-python",
    "scikit-image",
    "scikit-learn",
    "tensorflow",
    "shapely",
]

# This is set automatically by flit using `putting_dune.__version__`
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/google/putting-dune"
repository = "https://github.com/google/putting-dune"
# Other: `documentation`, `changelog`

[project.optional-dependencies]
# Development deps (unittest, linting, formating,...)
# Installed through `pip install .[dev]`
dev = [
    "pytest",
    "pytest-xdist",
    "pylint>=2.6.0",
    "yapf",
]

[build-system]
requires = ["flit_core >=3.5,<4"]
build-backend = "flit_core.buildapi"
